29 November 2016: Wouter
	- version 1.6.0 is in the development branch.
	- braces in view.c around lock statements.

28 November 2016: Wouter
	- new install-sh.

25 November 2016: Wouter
	- Fix that with openssl 1.1 control-use-cert: no uses less cpu, by
	  using no encryption over the unix socket.

22 Novenber 2016: Ralph
	- Make access-control-tag-data RDATA absolute. This makes the RDATA
	  origin consistent between local-data and access-control-tag-data.
	- Fix NSEC ENT wildcard check. Matching wildcard does not have to be a
	  subdomain of the NSEC owner.
	- QNAME minimisation uses QTYPE=A, therefore always check cache for
	  this type in harden-below-nxdomain functionality.
	- Added unit test for QNAME minimisation + harden below nxdomain
	  synergy.

22 November 2016: Wouter
	- iana portlist update.
	- Fix unit tests for DS hash processing for fake-dsa test option.
	- patch from Dag-Erling Smorgrav that removes code that relies
	  on sbrk().

21 November 2016: Wouter
	- Fix #1158: reference RFC 8020 "NXDOMAIN: There Really Is Nothing
	  Underneath" for the harden-below-nxdomain option.

10 November 2016: Ralph
	- Fix #1155: test status code of unbound-control in 04-checkconf,
	  not the status code from the tee command.

4 November 2016: Ralph
	- Added stub-ssl-upstream and forward-ssl-upstream options.

4 November 2016: Wouter
	- configure detects ssl security level API function in the autoconf
	  manner.  Every function on its own, so that other libraries (eg.
	  LibreSSL) can develop their API without hindrance.
	- Fix #1154: segfault when reading config with duplicate zones.
	- Note that for harden-below-nxdomain the nxdomain must be secure,
	  this means nsec3 with optout is insufficient.

3 November 2016: Ralph
	- Set OpenSSL security level to 0 when using aNULL ciphers.

3 November 2016: Wouter
	- .gitattributes line for githubs code language display.
	- log-identity: config option to set sys log identity, patch from